commit update